--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
-	<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/fontawesome-webfont.woff2?v=4.7.0"/>
+	<!--<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/fontawesome-webfont.woff2?v=4.7.0"/>
 	<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/fontawesome-webfont.woff?v=4.7.0"/>
-	<link rel="preload" as="style" href="css/font-awesome.min.css" onload="this.rel='stylesheet'"/>
+	<link rel="preload" as="style" href="css/font-awesome.min.css" onload="this.rel='stylesheet'"/>-->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 	<script>
@@ -36,9 +36,9 @@
 
 <!-- start of nav -->
 
-	<nav id="skiptocontent" aria-labelledby="nav0">
+	<!-- <nav id="skiptocontent" aria-labelledby="nav0">
 		<a href="#main" id="nav0" tabindex="0">skip to main content</a>
-	</nav>
+	</nav> -->
 
     <!-- Topnav adapted from https://www.w3schools.com/howto/howto_js_responsive_navbar_dropdown.asp -->
     <!-- Dropdown menu adapted from https://www.smashingmagazine.com/2017/11/building-accessible-menu-systems/ -->
@@ -104,13 +104,13 @@
     </nav>-->
 
     <!-- Mobile sticky nav adapted from https://www.mattmorgante.com/technology/sticky-navigation-bar-javascript -->
-    <nav id="sticky" aria-labelledby="nav2">
+    <!-- <nav id="sticky" aria-labelledby="nav2">
         <div class="menu" id="nav2" title="Menu">
-            <!--<span class="icon-title"><a style="cursor:pointer" class="icon" aria-label="Show Site Sections" aria-hidden="false" onclick="openNav()" tabindex="0"><i class="fa fa-bars"></i></a></span>-->
+            <span class="icon-title"><a style="cursor:pointer" class="icon" aria-label="Show Site Sections" aria-hidden="false" onclick="openNav()" tabindex="0"><i class="fa fa-bars"></i></a></span>
             <span class="nav-title">Undisciplining the Victorian Classroom</span>	
             <hr class="main-divider"/>
         </div>
-    </nav>
+    </nav> -->
 
     <!-- Overlay adapted from from https://www.w3schools.com/howto/howto_js_fullscreen_overlay.asp -->
     <!--<nav aria-labelledby="nav3">
@@ -163,10 +163,10 @@
     
     <main class="main" id="main">
 		<h3>Organizers</h3>
-		<p>Pearl Chaozon Bauer (Notre Dame de Namur University)<br/>
-		Ryan Fong (Kalamazoo College)<br/>
-		Sophia Hsu (Lehman College, CUNY)<br/>
-		Adrian S. Wisnicki (University of Nebraska-Lincoln)</p>
+		<p><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)<br/>
+		<strong>Ryan Fong</strong> (Kalamazoo College)<br/>
+		<strong>Sophia Hsu</strong> (Lehman College, CUNY)<br/>
+		<strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</p>
 		<br/>
 
 
