--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 		}
 	</script>
 	<!-- <script src="scripts/scripts.js"></script> -->
-	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
+	<!-- <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/> -->
 </body>
 
 </html>
