--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
     <header class="title" id="title-div">
 		<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
         <!--<img class="image content-holder-2" src="site-images/liv_012001_0001_deriv-1300px.jpg" srcset="site-images/liv_012001_0001_deriv-1300px.jpg 1300w, site-images/liv_012001_0001_deriv-1000px.jpg 1000w, site-images/liv_012001_0001_deriv-700px.jpg 700w, site-images/liv_012001_0001_deriv-400px.jpg 400w" alt="" sizes="(min-width: 1000px) 638px, (min-width: 780px) 699px, calc(100vw - 32px)" title="" />-->
-        <h1 class="header-title">Undisciplining the Victorian Classroom</h1>
-        <hr class="main-divider"/>
+		<h1 class="header-title">Undisciplining the Victorian Classroom</h1>
+		<img class="lead-image" src="images/uvc_000002-1300px.jpg"/>
         <!--<h2 class="italic">Lost Voices from the British Empire's Archives</h2>-->
     </header>
     
