--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<link rel="preload" as="style" href="css/font-awesome.min.css" onload="this.rel='stylesheet'"/> -->
 	<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/../fonts/jacksilver-webfont.woff2"/>
 	<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/../fonts/jacksilver-webfont.woff"/>
+	<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/../fonts/sourcesanspro-regular-webfont.woff2"/>
+	<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/../fonts/sourcesanspro-regular-webfont.woff"/>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 	<script>
