--- a/index.html
+++ b/index.html
@@ -167,21 +167,46 @@
     </header>
     
     <main class="main" id="main">
-		<h2>Organizers</h2>
-		<p><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)<br/>
-		<strong>Ryan Fong</strong> (Kalamazoo College)<br/>
-		<strong>Sophia Hsu</strong> (Lehman College, CUNY)<br/>
-		<strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</p>
+		
+		<aside class="announcement" aria-labelledby="announcement">
+			<p class="center italic" id="announcement">Read our <a href="#syllabi">Call for Syllabi</a> (deadline November 15, 2020)</p>
+		</aside>
+		
+		<section aria-labelledby="organizers">
+			<h2 id="organizers">Organizers</h2>
+			<p><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)<br/>
+			<strong>Ryan Fong</strong> (Kalamazoo College)<br/>
+			<strong>Sophia Hsu</strong> (Lehman College, CUNY)<br/>
+			<strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</p>
+			<br/>
+		</section>
+
+		<section aria-labelledby="mission">
+			<h2 id="mission">Mission Statement</h2>
+			<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. The project seeks to:</p>
+			<ol>
+				<li>foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literature of all kinds, and</li>
+				<li>introduce less-studied, global, Victorian-era authors into the classroom.</li>
+			</ol>
+			<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). Ultimately, the project hopes to inspire new modes of teaching that disrupt the racist partitioning and co-opting of knowledge in Victorian Studies.</p>
+		</section>
+		
 		<br/>
+		<hr/>
+		<br/>
+		
+		<section aria-labelledby="syllabi">
+			<h2 id="syllabi">Call for Syllabi (CFS) – <em>Undisciplining the Victorian Classroom</em></h2>
+			<p><em>Undisciplining the Victorian Classroom</em> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging  Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship.  Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literature of all kinds and 2) introduce less-studied, global, Victorian-era authors into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
 
+			<p>Currently, we are in the process of building content that models antiracist teaching practices for Victorian studies and are seeking syllabi from instructors whose work in the classroom aligns with the mission of “Undisciplining the Victorian Classroom.”  This content will be published on our website after a peer review process, to become part of our open-access resource.While these courses should feature a text or texts from the Victorian era, the syllabi do not need to be exclusively focused on 19th-century literature.  Such syllabi can be original syllabi from courses already taught, revised versions of previously used syllabi, or syllabi that have been designed but not yet deployed in a course setting.</p>
 
-		<h2>Mission Statement</h2>
-        <p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. The project seeks to:</p>
-        <ol>
-        	<li>foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literature of all kinds, and</li>
-			<li>introduce less-studied, global, Victorian-era authors into the classroom.</li>
-        </ol>
-        <p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). Ultimately, the project hopes to inspire new modes of teaching that disrupt the racist partitioning and co-opting of knowledge in Victorian Studies.</p>
+			<p>For this Call for Syllabi (CFS), we request short abstracts (300 words maximum) that summarize syllabus content, provide a critical reflection on course design, and cite a small, representative selection of primary and/or secondary course materials. Abstracts will be reviewed by the organizers of “Undisciplining the Victorian Classroom,” and select instructors will be invited to submit full syllabi along with short, correlated summaries of pedagogical critical intervention. Full syllabi and summaries will undergo full peer review and, if successful, be published on our website.</p>
+
+			<p>The deadline for submissions is November 15, 2020. Syllabi abstracts can be submitted directly through this <a href="https://forms.gle/nTUMTr7E5hH5G3ZV6">Google form</a>. Anyone with relevant professional interests is encouraged to apply, but we are especially interested in submissions from early-career scholars and those with backgrounds that are under-represented in Victorian Studies.</p>
+			
+			<p>Questions about this CFS, the “Undisciplining the Victorian Classroom” initiative, and/or requests to be put on the project mailing list can be directed to Pearl Chaozon Bauer</p>
+		</section>
     </main>
 
 	<!--<aside class="credits" id="credits-div">
