--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 			<p class="center italic" id="announcement">Read our <a href="#syllabi">Call for Syllabi</a> (deadline November 15, 2020)</p>
 		</aside>
 		
-		<section aria-labelledby="organizers">
+		<section class="organizers" aria-labelledby="organizers">
 			<h2 id="organizers">Organizers</h2>
 			<p><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)<br/>
 			<strong>Ryan Fong</strong> (Kalamazoo College)<br/>
