--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
 			<strong>Ryan Fong</strong> (Kalamazoo College)<br/>
 			<strong>Sophia Hsu</strong> (Lehman College, CUNY)<br/>
 			<strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</p>
-			<br/>
 		</section>
 
 		<section aria-labelledby="mission">
@@ -196,7 +195,7 @@
 		<br/>
 		
 		<section aria-labelledby="syllabi">
-			<h2 id="syllabi">Call for Syllabi (CFS) – <em>Undisciplining the Victorian Classroom</em></h2>
+			<h2 id="syllabi">Call for Syllabi (CFS)</h2>
 			<p><em>Undisciplining the Victorian Classroom</em> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging  Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literature of all kinds and 2) introduce less-studied, global, Victorian-era authors into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
 
 			<p>Currently, we are in the process of building content that models antiracist teaching practices for Victorian studies and are seeking syllabi from instructors whose work in the classroom aligns with the mission of “Undisciplining the Victorian Classroom.” This content will be published on our website after a peer review process, to become part of our open-access resource. While these courses should feature a text or texts from the Victorian era, the syllabi do not need to be exclusively focused on 19th-century literature. Such syllabi can be original syllabi from courses already taught, revised versions of previously used syllabi, or syllabi that have been designed but not yet deployed in a course setting.</p>
