--- a/test.html
+++ b/test.html
@@ -69,9 +69,7 @@
 		width: 100% !important;
 		object-fit:cover;
 		-o-object-fit: cover;
-		overflow: hidden;
-		object-position: 50% 50%;
-  		object-position: 0 0;
+		overflow: hidden;;
 		}
 
 		.carousel .carousel-item .carousel-caption a {
