--- a/test.html
+++ b/test.html
@@ -50,13 +50,14 @@
 		position: relative;
 		overflow: hidden;
 		width: 100%;
+		line-height: 0;
 		}
 		.carousel .carousel-item.active {
 		display: block;
 		}
 		/* More like bootstrap, less accessible */
 		.carousel .carousel-items {
-			border: solid 2px gray; /*transparent*/
+			border: solid 1px gray; /*transparent*/
 		}
 		@media screen and (min-width:320px) {
 			.carousel .carousel-items{
@@ -82,30 +83,32 @@
 		border-color: white;
 		outline: solid 3px #005a9c;
 		}
-		.carousel .carousel-item .carousel-image a img {
+		/* .carousel .carousel-item .carousel-image a img */
+		.carousel .carousel-item .carousel-image img {
 		height: 100%;
 		width: 100% !important;
 		object-fit:cover;
 		-o-object-fit: cover;
-		overflow: hidden;;
+		overflow: hidden;
+		object-position: 50% 50%;;
 		}
 		@media screen and (min-width:320px) {
-			.carousel .carousel-item .carousel-image a img{
+			.carousel .carousel-item .carousel-image img{
 				max-height: 183px;
 			}
 		}
 		@media screen and (min-width:480px) {
-			.carousel .carousel-item .carousel-image a img {
+			.carousel .carousel-item .carousel-image img {
 				max-height: 277px;
 			}
 		}
 		@media screen and (min-width:768px) {
-			.carousel .carousel-item .carousel-image a img {
+			.carousel .carousel-item .carousel-image img {
 				max-height: 446px;
 			}
 		}
 		@media screen and (min-width:992px) {
-			.carousel .carousel-item .carousel-image a img {
+			.carousel .carousel-item .carousel-image img {
 				max-height: 432px;
 			}
 		}	
@@ -144,12 +147,13 @@
 		.carousel .carousel-item .carousel-caption {
 		position: absolute;
 		right: 15%;
-		bottom: 0;
+		bottom: -1em;
 		left: 15%;
 		padding-top: 20px;
 		padding-bottom: 20px;
 		color: #fff;
 		text-align: center;
+		line-height: 1.6em;
 		}
 		/* Shared CSS for Pause, Next and Previous Slide Controls */
 		.carousel .controls button {
@@ -180,14 +184,17 @@
 		opacity: 1;
 		}
 		.carousel .controls button.previous {
-		right: 50px;
+			top: 10px;
+			right: 50px;
 		}
 		.carousel .controls button.next {
-		right: 6px;
+			top: 10px;
+			right: 6px;
 		}
 		/* Pause Control */
 		.carousel .controls button.rotation {
-		left: 6px;
+			top: 10px;
+			left: 6px;
 		}
 		.carousel .controls button.rotation svg polygon.pause {
 		stroke-width: 4;
@@ -437,9 +444,9 @@
 					aria-roledescription="slide"
 					aria-label="1 of 4">
 					<div class="carousel-image">
-					<a href="#">
+					<!-- <a href="#"> -->
 						<img src="images/uvc_0001-deriv.jpg" alt="">
-					</a>
+					<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -463,9 +470,9 @@
 					aria-roledescription="slide"
 					aria-label="2 of 4">
 					<div class="carousel-image">
-					<a href="#">
+					<!-- <a href="#"> -->
 						<img src="images/uvc_0002-deriv.jpg" alt="">
-					</a>
+					<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -489,9 +496,9 @@
 					aria-roledescription="slide"
 					aria-label="3 of 4">
 					<div class="carousel-image">
-					<a href="#">
-						<img src="images/uvc_0003-deriv.jpg" alt="">
-					</a>
+					<!-- <a href="#"> -->
+						<img src="images/uvc_0003-deriv.jpg" alt="" style="object-position: 50% 0;">
+					<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -510,9 +517,9 @@
 					aria-roledescription="slide"
 					aria-label="4 of 4">
 					<div class="carousel-image">
-					<a href="#">
+					<!-- <a href="#"> -->
 						<img src="images/uvc_0004-deriv.jpg" alt="">
-					</a>
+					<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
