--- a/test.html
+++ b/test.html
@@ -59,7 +59,7 @@
 		.carousel .carousel-items {
 			border: solid 1px gray; /*transparent*/
 		}
-		@media screen and (min-width:320px) {
+		/* @media screen and (min-width:320px) {
 			.carousel .carousel-items{
 				min-height: 183px;
 			}
@@ -78,7 +78,7 @@
 			.carousel .carousel-items {
 				min-height: 432px;
 			}
-		}		
+		}		 */
 		.carousel .carousel-items.focus {
 		border-color: white;
 		outline: solid 3px #005a9c;
@@ -127,7 +127,8 @@
 		}
 		.carousel .carousel-item .carousel-caption h3 a {
 		color: #fff;
-		font-weight: 600;
+		font-weight: 300;
+		font-style: normal;
 		}
 		.carousel .carousel-item .carousel-caption a:hover,
 		.carousel .carousel-item .carousel-caption span.contrast:hover {
@@ -360,7 +361,7 @@
 		<section id="myCarousel"
          class="carousel"
          aria-roledescription="carousel"
-         aria-label="Highlighted television shows">
+         aria-label="Images from the Victorian Globe">
 			<div class="carousel-inner">
 				<div class="controls">
 				<button class="rotation pause" aria-label="Stop automatic slide show">
@@ -444,14 +445,14 @@
 					aria-roledescription="slide"
 					aria-label="1 of 4">
 					<div class="carousel-image">
-					<!-- <a href="#"> -->
-						<img src="images/uvc_0001-deriv.jpg" alt="">
-					<!-- </a> -->
+						<a href="images/uvc_0004-deriv.jpg">
+							<img src="images/uvc_0004-deriv.jpg" alt="">
+						</a>
 					</div>
 					<div class="carousel-caption">
 					<h3>
-						<a href="#" id="carousel-label-1">
-						Label 1
+						<a href="#mcrae" id="carousel-label-1">
+							Tommy McRae, Untitled Illustration, 1896, public domain
 						</a>
 					</h3>
 					<!-- <div class="hidden-xs hidden-sm">
@@ -470,14 +471,14 @@
 					aria-roledescription="slide"
 					aria-label="2 of 4">
 					<div class="carousel-image">
-					<!-- <a href="#"> -->
-						<img src="images/uvc_0002-deriv.jpg" alt="">
-					<!-- </a> -->
+						<a href="images/uvc_0002-deriv.jpg">
+							<img src="images/uvc_0002-deriv.jpg" alt="">
+						</a>
 					</div>
 					<div class="carousel-caption">
 					<h3>
-						<a href="#" id="carousel-label-2">
-						Label 2
+						<a href="#markino" id="carousel-label-2">
+							Yoshio Markino, “Earl's Court Station,” 1910, public domain
 						</a>
 					</h3>
 					<!-- <div>
@@ -496,14 +497,14 @@
 					aria-roledescription="slide"
 					aria-label="3 of 4">
 					<div class="carousel-image">
-					<!-- <a href="#"> -->
-						<img src="images/uvc_0003-deriv.jpg" alt="" style="object-position: 50% 0;">
-					<!-- </a> -->
+						<a href="images/uvc_0001-deriv.jpg">
+							<img src="images/uvc_0001-deriv.jpg" alt="">
+						</a>
 					</div>
 					<div class="carousel-caption">
 					<h3>
-						<a href="#" id="carousel-label-3">
-						Label 3
+						<a href="#fante" id="carousel-label-3">
+							Anonymous Fante Artist, Asafo Flag, 1910, educational fair use
 						</a>
 					</h3>
 					<!-- <div>
@@ -517,14 +518,14 @@
 					aria-roledescription="slide"
 					aria-label="4 of 4">
 					<div class="carousel-image">
-					<!-- <a href="#"> -->
-						<img src="images/uvc_0004-deriv.jpg" alt="">
-					<!-- </a> -->
+						<a href="images/uvc_0003-deriv.jpg">
+							<img src="images/uvc_0003-deriv.jpg" alt="" style="object-position: 50% 0;">
+						</a>
 					</div>
 					<div class="carousel-caption">
 					<h3>
-						<a href="#" id="carousel-label-4">
-						Label 4
+						<a href="#kalighat" id="carousel-label-4">
+						Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, CC0
 						</a>
 					</h3>
 					<!-- <div>
@@ -543,7 +544,7 @@
 			<!-- carousel-inner -->
 			</section>
 			<!-- /.carousel -->
-			<div class="col-sm-1"></div>
+			<!-- <div class="col-sm-1"></div> -->
 
 		<h1 class="header-title">Undisciplining the Victorian Classroom</h1>
 		<hr/>
@@ -590,7 +591,22 @@
 			
 			<p>Questions about this CFS, the “Undisciplining the Victorian Classroom” initiative, and/or requests to be put on the project mailing list can be directed to <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a></p>
 		</section>
-    </main>
+
+	<br/>
+	<hr/>
+	<br/>
+	
+		<section aria-labelledby="images">
+			<h2 id="images">Slideshow images</h2>
+				<p id="mcrae"><em>Slide #1</em>: Tommy McRae. <a href="https://archive.org/details/cu31924029909060/page/n5/mode/2up">Untitled Illustration</a>. In <em>Australian Legendary Tales: Folk-Lore of the Noongahburrahs as Told to the PiccaninniesM</em>, 114. Edited and translated by K. Langloh Parker. London; Melbourne: David Nutt; Melville, Mullen & Slade, 1896. Public domain image.</p>
+
+				<p id="markino"><em>Slide #2</em>: Yoshio Markino. “<a href="https://archive.org/details/japaneseartistin00markuoft/page/n7/mode/2up">Earl’s Court Station</a>.” In <em>A Japanese Artist in London</em>, by Yoshio Markino, 196. London: Chatto & Windus, 1910. Public domain image.</p>
+
+				<p id="fante"><em>Slide #3</em>: Anonymous Fante Artist. “<a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>.” Cloth, dye. Ghana, c.1910. Textile and Fiber Arts, 88-9-1. Smithsonian Institution. National Museum of African Art.</p>
+
+				<p id="kalighat"><em>Slide #4</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>.” Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art, Cleveland. CC0 “No Rights Reserved”.</p>
+		</section>
+	</main>
 
 	<!--<aside class="credits" id="credits-div">
 		<hr />
