--- a/test.html
+++ b/test.html
@@ -33,7 +33,7 @@
 	<style>
 		/* 	Carousel adapted from https://www.w3.org/TR/wai-aria-practices-1.1/examples/carousel/carousel-1.html */
 		/* .carousel */
-		.carousel .carousel-inner {
+		.carousel .carousel-inner{
 		position: relative;
 		margin: 0 auto;
 		max-width: 900px;
@@ -43,7 +43,7 @@
 				width: 75% !important;
 			}
 		}
-		.carousel .carousel-item {
+		.carousel .carousel-item{
 		display: none;
 		/* max-height: 400px;
 		max-width: 900px; */
@@ -52,177 +52,179 @@
 		width: 100%;
 		line-height: 0;
 		}
-		.carousel .carousel-item.active {
+		.carousel .carousel-item.active{
 		display: block;
 		}
 		/* More like bootstrap, less accessible */
-		.carousel .carousel-items {
+		.carousel .carousel-items{
 			border: solid 1px gray; /*transparent*/
 		}
-		/* @media screen and (min-width:320px) {
+		/* @media screen and (min-width:320px){
 			.carousel .carousel-items{
 				min-height: 183px;
 			}
 		}
-		@media screen and (min-width:480px) {
-			.carousel .carousel-items {
+		@media screen and (min-width:480px){
+			.carousel .carousel-items{
 				min-height: 277px;
 			}
 		}
-		@media screen and (min-width:768px) {
-			.carousel .carousel-items {
+		@media screen and (min-width:768px){
+			.carousel .carousel-items{
 				min-height: 446px;
 			}
 		}
-		@media screen and (min-width:992px) {
-			.carousel .carousel-items {
+		@media screen and (min-width:992px){
+			.carousel .carousel-items{
 				min-height: 432px;
 			}
 		}		 */
-		.carousel .carousel-items.focus {
-		border-color: white;
-		outline: solid 3px #005a9c;
+		.carousel .carousel-items.focus{
+			border-color: white;
+			outline: solid 3px black; /*#005a9c*/
 		}
 		/* .carousel .carousel-item .carousel-image a img */
-		.carousel .carousel-item .carousel-image img {
-		height: 100%;
-		width: 100% !important;
-		object-fit:cover;
-		-o-object-fit: cover;
-		overflow: hidden;
-		object-position: 50% 50%;;
+		.carousel .carousel-item .carousel-image img{
+			height: 100%;
+			width: 100% !important;
+			object-fit:cover;
+			-o-object-fit: cover;
+			overflow: hidden;
+			object-position: 50% 50%;
 		}
-		@media screen and (min-width:320px) {
+		@media screen and (min-width:320px){
 			.carousel .carousel-item .carousel-image img{
 				max-height: 183px;
 			}
 		}
-		@media screen and (min-width:480px) {
-			.carousel .carousel-item .carousel-image img {
+		@media screen and (min-width:480px){
+			.carousel .carousel-item .carousel-image img{
 				max-height: 277px;
 			}
 		}
-		@media screen and (min-width:768px) {
-			.carousel .carousel-item .carousel-image img {
+		@media screen and (min-width:768px){
+			.carousel .carousel-item .carousel-image img{
 				max-height: 446px;
 			}
 		}
-		@media screen and (min-width:992px) {
-			.carousel .carousel-item .carousel-image img {
+		@media screen and (min-width:992px){
+			.carousel .carousel-item .carousel-image img{
 				max-height: 432px;
 			}
 		}	
-		.carousel .carousel-item .carousel-caption a {
+		.carousel .carousel-item .carousel-caption a{
 		text-decoration: underline;
 		}
 		.carousel .carousel-item .carousel-caption a,
-		.carousel .carousel-item .carousel-caption span.contrast {
-		display: inline-block;
-		background-color: rgba(0, 0, 0, 0.65);
-		padding-left: 0.25em;
-		padding-right: 0.25em;
-		border-radius: 5px;
-		border: 2px solid transparent;
-		margin: 0;
+		.carousel .carousel-item .carousel-caption span.contrast{
+			display: inline-block;
+			background-color: rgba(0, 0, 0, 0.65);
+			border-radius: 5px;
+			border: 2px solid transparent;
+			margin: 0;
+			padding: 2px 6px;
 		}
-		.carousel .carousel-item .carousel-caption h3 a {
-		color: #fff;
-		font-weight: 300;
-		font-style: normal;
+		.carousel .carousel-item .carousel-caption h3 a{
+			color: #fff;
+			font-weight: 300;
+			font-style: normal;
 		}
 		.carousel .carousel-item .carousel-caption a:hover,
-		.carousel .carousel-item .carousel-caption span.contrast:hover {
-		background-color: rgba(0, 0, 0, 1);
-		margin: 0;
+		.carousel .carousel-item .carousel-caption span.contrast:hover{
+			background-color: rgba(0, 0, 0, 1);
+			margin: 0;
 		}
-		.carousel .carousel-item .carousel-caption a:focus {
-		background-color: rgba(0, 0, 0, 1);
-		border-color: #fff;
-		margin: 0;
+		.carousel .carousel-item .carousel-caption a:focus{
+			background-color: rgba(0, 0, 0, 1);
+			border-color: #fff;
+			margin: 0;
 		}
-		.carousel .carousel-item .carousel-caption p {
-		font-size: 1em;
-		line-height: 1.5;
-		margin-bottom: 0;
+		.carousel .carousel-item .carousel-caption p{
+			font-size: 1em;
+			line-height: 1.5;
+			margin-bottom: 0;
+			left: 0;
+			right: 0;
+			bottom: 2em;
 		}
-		.carousel .carousel-item .carousel-caption {
-		position: absolute;
-		right: 15%;
-		bottom: -1em;
-		left: 15%;
-		padding-top: 20px;
-		padding-bottom: 20px;
-		color: #fff;
-		text-align: center;
-		line-height: 1.6em;
+		.carousel .carousel-item .carousel-caption{
+			position: absolute;
+			right: 15%;
+			bottom: -1em;
+			left: 15%;
+			padding-top: 20px;
+			padding-bottom: 20px;
+			color: #fff;
+			text-align: center;
+			line-height: 1.6em;
 		}
 		/* Shared CSS for Pause, Next and Previous Slide Controls */
-		.carousel .controls button {
-		padding: 0;
-		position: absolute;
-		top: 5px;
-		z-index: 10;
-		background-color: transparent;
-		border: none;
-		outline: none;
+		.carousel .controls button{
+			padding: 0;
+			position: absolute;
+			top: 5px;
+			z-index: 10;
+			background-color: transparent;
+			border: none;
+			outline: none;
 		}
-		.carousel .controls button svg rect.background {
-		stroke: black;
-		fill: black;
-		stroke-width: 1px;
-		opacity: 0.6;
+		.carousel .controls button svg rect.background{
+			stroke: black;
+			fill: black;
+			stroke-width: 1px;
+			opacity: 0.6;
 		}
-		.carousel .controls button svg rect.border {
-		fill: transparent;
-		stroke: transparent;
-		stroke-width: 2px;
+		.carousel .controls button svg rect.border{
+			fill: transparent;
+			stroke: transparent;
+			stroke-width: 2px;
 		}
 		/* Next and Previous Slide Controls */
-		.carousel .controls button svg polygon {
-		stroke: white;
-		fill: white;
-		stroke-width: 2;
-		opacity: 1;
+		.carousel .controls button svg polygon{
+			stroke: white;
+			fill: white;
+			stroke-width: 2;
+			opacity: 1;
 		}
-		.carousel .controls button.previous {
+		.carousel .controls button.previous{
 			top: 10px;
 			right: 50px;
 		}
-		.carousel .controls button.next {
+		.carousel .controls button.next{
 			top: 10px;
 			right: 6px;
 		}
 		/* Pause Control */
-		.carousel .controls button.rotation {
+		.carousel .controls button.rotation{
 			top: 10px;
 			left: 6px;
 		}
-		.carousel .controls button.rotation svg polygon.pause {
-		stroke-width: 4;
-		fill: transparent;
-		stroke: transparent;
+		.carousel .controls button.rotation svg polygon.pause{
+			stroke-width: 4;
+			fill: transparent;
+			stroke: transparent;
 		}
-		.carousel .controls button.rotation svg polygon.play {
-		stroke-width: 1;
-		fill: transparent;
-		stroke: transparent;
+		.carousel .controls button.rotation svg polygon.play{
+			stroke-width: 1;
+			fill: transparent;
+			stroke: transparent;
 		}
 		.carousel .controls button.rotation.pause svg polygon.pause,
-		.carousel .controls button.rotation.play svg polygon.play {
-		fill: white;
-		stroke: white;
+		.carousel .controls button.rotation.play svg polygon.play{
+			fill: white;
+			stroke: white;
 		}
 		/* Common focus styling for svg buttons */
 		.carousel .controls button:focus rect.background,
 		.carousel .controls button:hover rect.background,
 		.carousel .controls button:focus rect.border,
-		.carousel .controls button:hover rect.border {
-		fill: #005a9c;
-		stroke: #005a9c;
-		opacity: 1;
+		.carousel .controls button:hover rect.border{
+			fill: black ; /*#005a9c*/
+			stroke: black; /*#005a9c*/
+			opacity: 1;
 		}
-		.carousel .controls button:focus rect.border {
-		stroke: white;
+		.carousel .controls button:focus rect.border{
+			stroke: white;
 		}
 	</style>
 </head>
@@ -445,9 +447,9 @@
 					aria-roledescription="slide"
 					aria-label="1 of 4">
 					<div class="carousel-image">
-						<a href="images/uvc_0004-deriv.jpg">
+						<!-- <a href="images/uvc_0004-deriv.jpg"> -->
 							<img src="images/uvc_0004-deriv.jpg" alt="">
-						</a>
+						<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -457,9 +459,9 @@
 					</h3>
 					<!-- <div class="hidden-xs hidden-sm">
 						<p>
-						<span class="contrast">
-							7 pm Tuesday, March 3, on TV
-						</span>
+							<span class="contrast">
+								Tommy McRae, Untitled Illustration, 1896, public domain
+							</span>
 						</p>
 					</div> -->
 					</div>
@@ -471,9 +473,9 @@
 					aria-roledescription="slide"
 					aria-label="2 of 4">
 					<div class="carousel-image">
-						<a href="images/uvc_0002-deriv.jpg">
+						<!-- <a href="images/uvc_0002-deriv.jpg"> -->
 							<img src="images/uvc_0002-deriv.jpg" alt="">
-						</a>
+						<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -483,9 +485,9 @@
 					</h3>
 					<!-- <div>
 						<p>
-						<span class="contrast">
-							Sept. 14 to Sept. 24 or 27
-						</span>
+							<span class="contrast">
+								Yoshio Markino, “Earl's Court Station,” 1910, public domain
+							</span>
 						</p>
 					</div> -->
 					</div>
@@ -497,9 +499,9 @@
 					aria-roledescription="slide"
 					aria-label="3 of 4">
 					<div class="carousel-image">
-						<a href="images/uvc_0001-deriv.jpg">
+						<!-- <a href="images/uvc_0001-deriv.jpg"> -->
 							<img src="images/uvc_0001-deriv.jpg" alt="">
-						</a>
+						<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -508,6 +510,11 @@
 						</a>
 					</h3>
 					<!-- <div>
+						<p>
+							<span class="contrast">
+								Anonymous Fante Artist, Asafo Flag, 1910, educational fair use
+							</span>
+						</p>
 					</div> -->
 					</div>
 					<!-- .carousel-caption -->
@@ -518,9 +525,9 @@
 					aria-roledescription="slide"
 					aria-label="4 of 4">
 					<div class="carousel-image">
-						<a href="images/uvc_0003-deriv.jpg">
+						<!-- <a href="images/uvc_0003-deriv.jpg"> -->
 							<img src="images/uvc_0003-deriv.jpg" alt="" style="object-position: 50% 0;">
-						</a>
+						<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -531,7 +538,7 @@
 					<!-- <div>
 						<p>
 						<span class="contrast">
-							8 pm Sunday, March 8, on TV: Sneak peak at the final season.
+							Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, CC0
 						</span>
 						</p>
 					</div> -->
@@ -598,9 +605,9 @@
 	
 		<section aria-labelledby="images">
 			<h2 id="images">Slideshow images</h2>
-				<p id="mcrae"><em>Slide #1</em>: Tommy McRae. <a href="https://archive.org/details/cu31924029909060/page/n5/mode/2up">Untitled Illustration</a>. In <em>Australian Legendary Tales: Folk-Lore of the Noongahburrahs as Told to the PiccaninniesM</em>, 114. Edited and translated by K. Langloh Parker. London; Melbourne: David Nutt; Melville, Mullen & Slade, 1896. Public domain image.</p>
+				<p id="mcrae"><em>Slide #1</em>: Tommy McRae. Untitled Illustration. In <a href="https://archive.org/details/cu31924029909060/page/n5/mode/2up">Australian Legendary Tales</a>, 114. Edited and translated by K. Langloh Parker. London; Melbourne: David Nutt; Melville, Mullen & Slade, 1896. Public domain image.</p>
 
-				<p id="markino"><em>Slide #2</em>: Yoshio Markino. “<a href="https://archive.org/details/japaneseartistin00markuoft/page/n7/mode/2up">Earl’s Court Station</a>.” In <em>A Japanese Artist in London</em>, by Yoshio Markino, 196. London: Chatto & Windus, 1910. Public domain image.</p>
+				<p id="markino"><em>Slide #2</em>: Yoshio Markino. “Earl’s Court Station.” In <a href="https://archive.org/details/japaneseartistin00markuoft/page/n7/mode/2up">A Japanese Artist in London</a>, by Yoshio Markino, 196. London: Chatto & Windus, 1910. Public domain image.</p>
 
 				<p id="fante"><em>Slide #3</em>: Anonymous Fante Artist. “<a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>.” Cloth, dye. Ghana, c.1910. Textile and Fiber Arts, 88-9-1. Smithsonian Institution. National Museum of African Art.</p>
 
