--- a/test.html
+++ b/test.html
@@ -122,12 +122,18 @@
 			border-radius: 5px;
 			border: 2px solid transparent;
 			margin: 0;
-			padding: 2px 6px;
+			padding: 0 6px;
 		}
 		.carousel .carousel-item .carousel-caption h3 a{
 			color: #fff;
+			font-size: .8em;
 			font-weight: 300;
 			font-style: normal;
+		}
+		@media screen and (min-width:768px){
+			.carousel .carousel-item .carousel-caption h3 a{
+				font-size: .9em;
+			}
 		}
 		.carousel .carousel-item .carousel-caption a:hover,
 		.carousel .carousel-item .carousel-caption span.contrast:hover{
@@ -149,9 +155,10 @@
 		}
 		.carousel .carousel-item .carousel-caption{
 			position: absolute;
-			right: 15%;
-			bottom: -1em;
-			left: 15%;
+			right: 6px;
+			/* right: 15%; */
+			bottom: -25px;
+			/* left: 15%; */
 			padding-top: 20px;
 			padding-bottom: 20px;
 			color: #fff;
@@ -454,7 +461,7 @@
 					<div class="carousel-caption">
 					<h3>
 						<a href="#mcrae" id="carousel-label-1">
-							Tommy McRae, Untitled Illustration, 1896, public domain
+							Slide 1 details<!-- Tommy McRae, Untitled Illustration, 1896, public domain -->
 						</a>
 					</h3>
 					<!-- <div class="hidden-xs hidden-sm">
@@ -480,7 +487,7 @@
 					<div class="carousel-caption">
 					<h3>
 						<a href="#markino" id="carousel-label-2">
-							Yoshio Markino, “Earl's Court Station,” 1910, public domain
+							Slide 2 details<!-- Yoshio Markino, “Earl's Court Station,” 1910, public domain -->
 						</a>
 					</h3>
 					<!-- <div>
@@ -506,7 +513,7 @@
 					<div class="carousel-caption">
 					<h3>
 						<a href="#fante" id="carousel-label-3">
-							Anonymous Fante Artist, Asafo Flag, 1910, educational fair use
+							Slide 3 details<!-- Anonymous Fante Artist, Asafo Flag, 1910, educational fair use -->
 						</a>
 					</h3>
 					<!-- <div>
@@ -532,7 +539,7 @@
 					<div class="carousel-caption">
 					<h3>
 						<a href="#kalighat" id="carousel-label-4">
-						Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, CC0
+							Slide 4 details<!-- Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, CC0 -->
 						</a>
 					</h3>
 					<!-- <div>
