--- a/test.html
+++ b/test.html
@@ -610,7 +610,7 @@
 	<hr/>
 	<br/>
 	
-		<section aria-labelledby="images">
+		<section aria-labelledby="images" class="small">
 			<h2 id="images">Slideshow images</h2>
 				<p id="mcrae"><em>Slide #1</em>: Tommy McRae. Untitled Illustration. In <a href="https://archive.org/details/cu31924029909060/page/n5/mode/2up">Australian Legendary Tales</a>, 114. Edited and translated by K. Langloh Parker. London; Melbourne: David Nutt; Melville, Mullen & Slade, 1896. Public domain image.</p>
 
