--- a/test2.html
+++ b/test2.html
@@ -155,10 +155,10 @@
 		}
 		.carousel .carousel-item .carousel-caption{
 			position: absolute;
-			/* right: 6px; */
-			right: 15%;
+			right: 6px;
+			/* right: 15%; */
 			bottom: -25px;
-			left: 15%;
+			/* left: 15%; */
 			padding-top: 20px;
 			padding-bottom: 20px;
 			color: #fff;
@@ -461,7 +461,7 @@
 					<div class="carousel-caption">
 					<h3>
 						<a href="#mcrae" id="carousel-label-1">
-							Tommy McRae, Untitled Illustration, 1896, public domain
+							Tommy McRae, Untitled Illustration, 1896
 						</a>
 					</h3>
 					<!-- <div class="hidden-xs hidden-sm">
@@ -487,7 +487,7 @@
 					<div class="carousel-caption">
 					<h3>
 						<a href="#markino" id="carousel-label-2">
-							Yoshio Markino, “Earl's Court Station,” 1910, public domain
+							Yoshio Markino, “Earl's Court Station,” 1910
 						</a>
 					</h3>
 					<!-- <div>
@@ -513,7 +513,7 @@
 					<div class="carousel-caption">
 					<h3>
 						<a href="#fante" id="carousel-label-3">
-							Anonymous Fante Artist, Asafo Flag, 1910, educational fair use
+							Anonymous Fante Artist, Asafo Flag, 1910
 						</a>
 					</h3>
 					<!-- <div>
@@ -539,7 +539,7 @@
 					<div class="carousel-caption">
 					<h3>
 						<a href="#kalighat" id="carousel-label-4">
-							Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, CC0
+							Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s
 						</a>
 					</h3>
 					<!-- <div>
@@ -610,7 +610,7 @@
 	<hr/>
 	<br/>
 	
-		<section aria-labelledby="images" class="small">
+		<section aria-labelledby="images" class="smaller">
 			<h2 id="images">Slideshow images</h2>
 				<p id="mcrae"><em>Slide #1</em>: Tommy McRae. Untitled Illustration. In <a href="https://archive.org/details/cu31924029909060/page/n5/mode/2up">Australian Legendary Tales</a>, 114. Edited and translated by K. Langloh Parker. London; Melbourne: David Nutt; Melville, Mullen & Slade, 1896. Public domain image.</p>
 
