--- a/test2.html
+++ b/test2.html
@@ -83,6 +83,30 @@
 			border-color: white;
 			outline: solid 3px black; /*#005a9c*/
 		}
+		.carousel .carousel-item .carousel-image{
+			background: #e6e6e6;
+		}
+		@media screen and (min-width:320px){
+			.carousel .carousel-item .carousel-image{
+				min-height: 183px;
+			}
+		}
+		@media screen and (min-width:480px){
+			.carousel .carousel-item .carousel-image{
+				min-height: 277px;
+			}
+		}
+		@media screen and (min-width:768px){
+			.carousel .carousel-item .carousel-image{
+				min-height: 446px;
+			}
+		}
+		@media screen and (min-width:992px){
+			.carousel .carousel-item .carousel-image{
+				min-height: 432px;
+			}
+		}	
+
 		/* .carousel .carousel-item .carousel-image a img */
 		.carousel .carousel-item .carousel-image img{
 			height: 100%;
