--- a/test2.html
+++ b/test2.html
@@ -613,9 +613,7 @@
 			<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). Ultimately, the project hopes to inspire new modes of teaching that disrupt the racist partitioning and co-opting of knowledge in Victorian Studies.</p>
 		</section>
 		
-		<br/>
-		<hr/>
-		<br/>
+		<hr class="section-divider"/>
 		
 		<section aria-labelledby="syllabi">
 			<h2 id="syllabi">Call for Syllabi (CFS)</h2>
@@ -630,9 +628,7 @@
 			<p>Questions about this CFS, the “Undisciplining the Victorian Classroom” initiative, and/or requests to be put on the project mailing list can be directed to <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a></p>
 		</section>
 
-	<br/>
-	<hr/>
-	<br/>
+		<hr class="section-divider"/>
 	
 		<section aria-labelledby="images" class="smaller">
 			<h2 id="images">Slideshow images</h2>
