add scripts to index

--- a/index.html
+++ b/index.html
@@ -236,6 +236,10 @@
 			});
 		}
 	</script>
+	<script src="scripts/carousel.js"></script>
+	<script src="scripts/carouselItem.js"></script>
+	<script src="scripts/carouselButtons.js"></script>
+	<script src="scripts/pauseButton.js"></script>
 	<!-- <script src="scripts/scripts.js"></script> -->
 	<!-- <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/> -->
 </body>
